Bug 236687 - Unreviewed, non-unified build fix after r289742
Summary: Unreviewed, non-unified build fix after r289742
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Lauro Moura
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-02-15 21:02 PST by Lauro Moura
Modified: 2022-02-16 15:15 PST (History)
8 users (show)

See Also:


Attachments
Patch (1.18 KB, patch)
2022-02-15 21:03 PST, Lauro Moura
no flags Details | Formatted Diff | Diff
Patch (2.37 KB, patch)
2022-02-16 12:09 PST, Lauro Moura
no flags Details | Formatted Diff | Diff
Patch (1.18 KB, patch)
2022-02-16 13:29 PST, Lauro Moura
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Lauro Moura 2022-02-15 21:02:05 PST
Unreviewed, non-unified build fix after r289742
Comment 1 Lauro Moura 2022-02-15 21:03:20 PST
Created attachment 452139 [details]
Patch
Comment 2 Lauro Moura 2022-02-16 12:09:51 PST
Created attachment 452227 [details]
Patch
Comment 3 EWS 2022-02-16 12:55:32 PST
Tools/Scripts/svn-apply failed to apply attachment 452227 [details] to trunk.
Please resolve the conflicts and upload a new patch.
Comment 4 Lauro Moura 2022-02-16 13:28:00 PST
bug236716 beat me to the geolocation fix...
Comment 5 Lauro Moura 2022-02-16 13:29:04 PST
Created attachment 452243 [details]
Patch
Comment 6 EWS 2022-02-16 15:14:00 PST
Committed r289971 (247357@main): <https://commits.webkit.org/247357@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 452243 [details].
Comment 7 Radar WebKit Bug Importer 2022-02-16 15:15:22 PST
<rdar://problem/89051453>